--- a/lireddit-server/src/main/resources/application.properties
+++ b/lireddit-server/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.NonRegisteringDriver
+spring.datasource.url=jdbc:mysql://localhost:3306/lireddit
+spring.datasource.username=root
+spring.datasource.password=123456789
+spring.jpa.properties.hibernate.dilect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
+spring.jpa.show-sql=true
 
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=7e4944397ba8ca
+spring.mail.password=1b7422c0833442
+spring.mail.protocol=smtp
