--- a/lireddit-server/pom.xml
+++ b/lireddit-server/pom.xml
@@ -81,6 +81,12 @@
 			<version>0.11.2</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.15.0</version>
+		</dependency>
+
 
 	</dependencies>
 
